# ScreenshotScanner

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py  simple_demo.py
.github/workflows/: codeql.yml
examples/: basic_usage.py
screenshot_scanner/: __init__.py  detector.py  scanner.py
tests/: test_detector.py
