[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ScreenshotScanner"
version = "0.1.0"
description = "A heuristic-based tool to detect whether an image is a screenshot"
readme = "README.md"
authors = [{name = "AzwadFawadHasan", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
keywords = ["screenshot", "detection", "image-processing", "document-verification", "kyc"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
    "scipy>=1.6.0",
    "opencv-python>=4.5.0",
    "pytesseract>=0.3.8",
]

[project.urls]
Homepage = "https://github.com/AzwadFawadHasan/ScreenshotScanner"
Documentation = "https://github.com/AzwadFawadHasan/ScreenshotScanner#readme"
Repository = "https://github.com/AzwadFawadHasan/ScreenshotScanner"
"Bug Tracker" = "https://github.com/AzwadFawadHasan/ScreenshotScanner/issues"

[tool.setuptools]
packages = ["screenshot_scanner"]

[tool.setuptools.package-data]
screenshot_scanner = ["py.typed"]
